chamber/styles/base.css
/* Global CSS variables */
:root {
  /* Color palette */
  --primary-color: #13678a;
  --secondary-color: #45c4b0;
  --accent1-color: #012030;
  --accent2-color: #9aeba3;
  --accent3-color: #dafdba;

  /* Fonts */
  --font-family: "Poppins", sans-serif;
  --header-font-family: "Poppins", sans-serif;
  --main-font-family: "Raleway", sans-serif;
  --nav-font-family: "Raleway", sans-serif;
  --h1-size: 2rem;
  --h1-weight: 800;
  --h2-size: 1.5rem;
  --h2-weight: 700;
  --h3-size: 1.1rem;
  --h3-weight: 600;
  --paragraph-size: 1rem;
  --paragraph-weight: 200;
  --nav-font-size: 1.3rem;

  /* Elements colors */
  --background-color: white;
  --heading-color-on-white: #012030;
  --heading-color-on-color: white;
  --paragraph-color-on-white: #012030;
  --paragraph-color-on-color: #45c4b0;
  --nav-font-color: white;
  --nav-background-color: #13678a;
  --nav-hover-font-color: #45c4b0;
  --nav-hover-background-color: #13678a;

  /* Breakpoints */
  --breakpoint-sm: 576px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 1024px;
  --breakpoint-xl: 1200px;
}

/* Set default font style and spacing */
* {
  box-sizing: border-box;
}

html {
  background-color: var(--background-color);
  font-family: var(--font-family);
  font-size: 120%;
  color: var(--accent1-color);
}

h1 {
  font-family: var(--header-font-family);
  font-size: var(--h1-size);
  font-weight: var(--h1-weight);
  margin: 0;
}

h2 {
  margin: 0;
  font-family: var(--header-font-family);
  font-size: var(--h2-size);
  font-weight: var(--h2-weight);
  background-color: #13678a;
  padding: 0.5rem 1rem;
  border-bottom-left-radius: 64px;
  border-top-left-radius: 64px;
  color: var(--heading-color-on-color);
}

section h2 {
  margin-bottom: 1rem;
}

h3 {
  font-size: var(--h3-size);
  font-weight: var(--h3-weight);
  margin: 0;
}

p {
  line-height: 1.3rem;
  margin: 0;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

img {
  width: 100%;
}

.button {
  text-decoration: none;
  background-color: var(--secondary-color);
  box-shadow: 2px 2px 4px var(--accent1-color);
  border-radius: 4px;
  text-align: center;
  padding: 0.3rem;
  color: var(--accent1-color);
  font-weight: 300;
  text-shadow: 1px 1px 2px var(--accent2-color);
}

hr {
  border: 1px solid #0120302f;
  width: 100%;
}
/* End of default font and styles */

/* Mobile. Header section */
header {
  display: flex;
}

.logo {
  width: 50px;
  height: fit-content;
  align-self: center;
  margin: 0.2rem 0 0 0.2rem;
}

.header-title-container {
  margin: auto 0 0 1rem;
}

header h3 {
  line-height: 1rem;
}

.menu-button-container {
  margin: auto 0.2rem 0 auto;
  line-height: 0;
  padding: 0;
}

.menu-button {
  width: 36px;
}
/* End of mobile header Section */

/* Mobile navigation section */
nav {
  display: flex;
  flex-direction: row-reverse;
}

nav ul {
  width: 75%;
  margin: 0.5rem 0;
  background-color: var(--nav-background-color);
  border-radius: 4px;
  border-bottom-left-radius: 64px;
  border-top-left-radius: 64px;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.nav-link {
  text-decoration: none;
  color: var(--nav-font-color);
  font-weight: var(--paragraph-weight);
  font-size: var(--nav-font-size);
  line-height: 3rem;
  padding-right: 50px;
}
/* END of Mobile navigation section */

/* Mobile. HERO Section */
.hero-container {
  display: grid;
  grid-template-columns: repeat(8, 1fr);
}

.hero-image {
  grid-column: 1/9;
  grid-row: 1/7;
  border-radius: 4px;
}

.hero-header {
  grid-column: 2/8;
  grid-row: 2/4;
  background-color: rgba(255, 255, 255, 0.555);
  border-radius: 8px;
  box-shadow: 1px 1px 6px var(--accent1-color);
  padding: 0.5rem;
  text-align: center;
}

.hero-call-to-action {
  grid-column: 2/4;
  grid-row: 5/6;
}
/* END of Mobile HERO Section */

/* Mobile. Weather widget */
.weather-widget {
  margin: 1rem 0;
  /* display: flex;
  flex-direction: column; */
  width: 100%;
  overflow: hidden;
}

.moving-text {
  display: inline-block;
  animation: marquee 10s linear infinite;
  white-space: nowrap;
}

@keyframes marquee {
  0% {
    transform: translateX(100%);
  }
  100% {
    transform: translateX(-100%);
  }
}
/* END of Mobile Weather Widget*/


/* Directory widget section */
.directory-button-container {
  display: none;
}
/* END of Directory widget section */


/* Mobile Upcoming Events Section*/
.event-card {
  margin: 0 0.2rem 2rem 0.2rem;
  display: flex;
  flex-direction: column;
}

.event-card p {
  margin: 0.3rem auto;
}

.event-card-image {
  width: 32px;
  align-self: flex-end;
}
/* END of Mobile Upcoming Events Section*/

/* Mobile Spotlights Section */
.spotlight-card {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
  padding-bottom: 1rem;
  border: 1px solid #0120302f;
  border-top-left-radius: 32px;
  border-top-right-radius: 32px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
}

.spotlight-card-image {
  border-top-left-radius: 30px;
  border-top-right-radius: 30px;
}

.spotlight-card p,
.spotlight-card h3 {
  margin: 0.2rem;
}

.spotlight-card-button {
  width: max-content;
  align-self: center;
}
/* END of Mobile Spotlights Section */

/* Footer */
iframe {
  display: none;
}

footer img {
  width: 24px;
}

.site-footer {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--secondary-color);
  padding: 1rem 0.5rem;
  border-radius: 4px;
}

.location,
.contact {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.project-sign {
  display: flex;
  flex-direction: column;
  text-align: center;
}

.project-sign p {
  font-size: 0.75rem;
}

